Changelog
=========

6.0 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Added `search_index` option to StreamField blocks to control whether the block is indexed for searching (Vedant Pandey)
 * Fix: Update system check for overwriting storage backends to recognise the `STORAGES` setting introduced in Django 4.2 (phijma-leukeleu)
 * Fix: Prevent password change form from raising a validation error when browser autocomplete fills in the "Old password" field (Chiemezuo Akujobi)
 * Fix: Ensure that the legacy dropdown options, when closed, do not get accidentally clicked by other interactions wide viewports (CheesyPhoenix, Christer Jensen)
 * Fix: Add a fallback background for the editing preview iframe for sites without a background (Ian Price)
 * Fix: Preserve whitespace in rendered comments (Elhussein Almasri)
 * Fix: Remove search logging from project template so that new projects without the search promotions module will not error (Matt Westcott)
 * Fix: Ensure text only email notifications for updated comments do not escape HTML characters (Rohit Sharma)
 * Docs: Document, for contributors, the use of translate string literals passed as arguments to tags and filters using `_()` within templates (Chiemezuo Akujobi)
 * Maintenance: Update BeautifulSoup upper bound to 4.12.x (scott-8)
 * Maintenance: Migrate initialization of classes (such as `body.ready`) from multiple JavaScript implementations to one Stimulus controller `w-init` (Chiemezuo Akujobi)
 * Maintenance: Adopt the usage of of translate string literals using `arg=_('...')` in all `wagtailadmin` module templates (Chiemezuo Akujobi)
 * Maintenance: Migrate the contrib styleguide index view to a class-based view (Chiemezuo Akujobi)
 * Maintenance: Update djhtml to 3.0.6 (Matt Westcott)
 * Maintenance: Migrate the contrib settings edit view to a class-based view (Chiemezuo Akujobi, Sage Abdullah)
 * Maintenance: Remove django-pattern-library upper bound in testing dependencies (Sage Abdullah)

