@@ -15,6 +15,7 @@ depth: 1
 ### Other features
 
  * Added `search_index` option to StreamField blocks to control whether the block is indexed for searching (Vedant Pandey)
+ * Remember previous location on returning from page add/edit actions (Robert Rollins)
 
 ### Bug fixes
 
